# fastapi_libr

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
src/: config.py  database.py  main.py
src/migrations/: env.py
src/models/: __init__.py  books.py  users.py
src/repositories/: base.py
src/repositories/mappers/: base.py
src/utils/: db_manager.py
