[tool.poetry]
name = "FastAPILibr"
version = "0.1.0"
description = ""
authors = ["Akylbek Askharov <125436332+AskharovA@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.2"}
alembic = "^1.13.3"
sqlalchemy = "^2.0.35"
pillow = "^10.4.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-dotenv = "^0.5.2"
celery = "^5.4.0"
asyncpg = "^0.29.0"
bcrypt = "4.0.1"
passlib = "^1.7.4"
redis = "^5.1.1"
ruff = "^0.6.9"
pyright = "^1.1.384"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
